tls/ingress/mlflow-https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-https-ingress
  namespace: mlops
  annotations:
    kubernetes.io/ingress.class: istio
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/common-name: mlflow.mlops.platform
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - mlflow.mlops.platform
      secretName: mlflow-tls-secret
  rules:
    - host: mlflow.mlops.platform
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlflow
                port:
                  number: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-https-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: istio
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - grafana.mlops.platform
      secretName: grafana-tls-secret
  rules:
    - host: grafana.mlops.platform
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-stack-grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kserve-https-ingress
  namespace: mlops
  annotations:
    kubernetes.io/ingress.class: istio
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - "*.serve.mlops.platform"
      secretName: kserve-tls-secret
  rules:
    - host: "*.serve.mlops.platform"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loan-default-predictor
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evidently-https-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: istio
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - evidently.mlops.platform
      secretName: evidently-tls-secret
  rules:
    - host: evidently.mlops.platform
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evidently
                port:
                  number: 8085
